fix promo overflow

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -322,6 +322,7 @@
 
 .promo {
   padding: 80px 0;
+  overflow: hidden;
   &__inner {
     position: relative;
     display: flex;
